syntax = "proto3";

package configimage;
option go_package = "github.com/995933447/mconfigcenter/configimage";

import "easymicro_ext.proto";
import "common.proto";

option (easymicro_ext.proto_gen_opts) = {
  grpc_schema:"mconfigcenterimg"
  discovery_name:"mconfigcenter_img"
};

service ConfigImage {
  // 获取配置集合
  rpc ListConfig(ListConfigReq) returns (ListConfigResp);

  // 获取键值配置
  rpc GetKeyValue(GetKeyValueReq) returns (GetKeyValueResp);
}

message ListConfigReq {
  message Sort {
    string field = 1; // 排序字段
    int32 sort_way = 2; // 排序方式，1升序或者-1降序
  }

  message Selector {
    string field = 1;
    int32 selected = 2;
  }

  string coll_name = 1; // 集合名称
  uint32 offset = 2; // 位移
  uint32 limit = 3; // 条数
  repeated Sort sorts = 4; // 排序
  bytes filter = 5; // 过滤
  repeated Selector selectors = 6; // 字段
}

message ListConfigResp {
  repeated bytes list = 1; // 列表
  uint32 total = 2; // 总条数
}

message GetKeyValueReq {
  string key = 1;
}

message GetKeyValueResp {
  common.KVConfig config = 1;
  string id = 2;
}